--- a/index.html
+++ b/index.html
@@ -4,5 +4,8 @@
 </head>
 <body>
 <h1>Hello Phonegap </h1>
+
+
+<script type="text/javascript" src="//code.jquery.com/jquery-1.10.2.min.js"></script>
 </body>
 </html>
